chore: updated tests